--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/colors": "^7.0.0",
     "@ant-design/icons": "^5.1.4",
     "@pbe/react-yandex-maps": "^1.2.4",
